# ctrlsys

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTING.md  Taskfile.yml  buf.gen.go.yaml  buf.gen.rust.yaml  buf.gen.yaml  buf.work.yaml  go.mod  go.sum  logo  package-lock.json  package.json
.github/workflows/: build-and-push.yml
apps/api/: Taskfile.yml
apps/console/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json
apps/console/src/: app.d.ts  hooks.server.ts
apps/console/src/lib/components/head/: head.test.ts
apps/console/src/lib/components/input/: input.test.ts  validators.ts
apps/console/src/lib/components/switch/: switch.stories.svelte
apps/console/src/lib/components/table/: tbody.svelte  tfoot.svelte
apps/console/src/lib/navigation/: index.ts  navigation-store.svelte.ts  routes.ts
apps/console/src/lib/navigation/components/sidebar/: sidebar.svelte
apps/console/src/lib/statusbar/: index.ts  statusbar-provider.svelte  statusbar-store.svelte.ts  statusbar.svelte
apps/console/src/lib/toolbar/: index.ts  toolbar-provider.svelte  toolbar-store.svelte.ts  toolbar.svelte
apps/console/src/routes/: +layout.svelte  +page.svelte  footer.svelte  homepage.svelte
apps/console/src/routes/(pages)/timers/: +page.svelte
apps/console/src/routes/health/: +page.svelte
apps/console/src/routes/jobs/: +page.svelte
apps/console/src/routes/timers/: +page.svelte
apps/controlplane/: Cargo.toml
apps/controlplane/src/: api.rs  main.rs  models.rs  state.rs
apps/controlplane/src/api/: mod.rs  timers.rs
cli/: Cargo.toml  Taskfile.yml
cli/src/: client.rs  main.rs
cli/src/commands/: config.rs  database.rs  location.rs  mod.rs  task.rs  template.rs  timer.rs  weather.rs
cli/src/tui/: location_watch_all.rs  mod.rs  timer_watch.rs  watch_all.rs  weather_watch_all.rs
infra/: jobscheduler.yaml
jobs/timer/: .dockerignore  .gitignore  Cargo.toml  Containerfile  Taskfile.yml  build.rs
jobs/timer/.task/checksum/: proto-generate
jobs/timer/k8s/: job-example.yaml
jobs/timer/proto/: timer.proto
jobs/timer/src/: config.rs  error.rs  lib.rs  main.rs
jobs/timer/src/timer/: mod.rs  runner.rs  service.rs  status.rs
lib/: Cargo.toml  Taskfile.yml
lib/src/: lib.rs  location.rs  slug.rs  uuid.rs
lib/src/config/: mod.rs  server.rs
lib/src/controllers/: database.rs  geocoding.rs  location.rs  mod.rs  task.rs  timer.rs  weather.rs
lib/src/db/: mod.rs
lib/src/models/: database.rs  geocoding.rs  mod.rs  task.rs  template.rs  weather.rs
lib/src/services/: database.rs  geocoding.rs  location.rs  mod.rs  template.rs  timer.rs  weather.rs
migrations/: 20250101000000_initial_schema.sql
notebook/: Ideas.md
proto/ctrlsys/jobscheduler/v1/: jobscheduler.proto
proto/ctrlsys/timer/v1/: timer.proto
proto/jobscheduler/: buf.yaml
proto/timer/: buf.yaml
server/: Cargo.toml
server/src/: auth.rs  background.rs  main.rs  state.rs
services/jobscheduler/: .dockerignore  .gitignore  Containerfile  Dockerfile  README.md  Taskfile.yml  go.mod  go.sum  main.go
services/jobscheduler/.task/checksum/: proto-generate
services/jobscheduler/internal/config/: config.go
services/jobscheduler/internal/jobs/: job_interface.go  registry.go  timer.go
services/jobscheduler/internal/k8s/: client.go  job_creator.go
services/jobscheduler/internal/server/: scheduler.go  server.go
services/jobscheduler/internal/version/: version.go
services/jobscheduler/k8s/: deployment.yaml  rbac.yaml  service.yaml
services/jobscheduler/proto/: jobscheduler.pb.go  jobscheduler_grpc.pb.go
services/jobscheduler/proto/jobscheduler/: jobscheduler.proto
services/jobscheduler/scripts/: generate-proto.sh
src/: lib.rs  nomenclator.rs
src/config/: cli.rs  mod.rs  server.rs
src/controllers/: database.rs  location.rs  mod.rs  template.rs  timer.rs
src/db/: mod.rs
src/lib/tiles/: exchange-rate.svelte
src/models/: location.rs  mod.rs  timer.rs
src/services/: database.rs  location.rs  mod.rs  task.rs  timer.rs
src/ws/: mod.rs  timer.rs
ui/: package.json
ui/src/routes/: +layout.svelte  +page.svelte
yaak/: yaak.rq_em7jc9rRuo.yaml  yaak.wk_yttKVyrFf7.yaml
