[package]
name = "ctrlsys"
version = "0.1.0"
edition = "2021"

# CLI binary
[[bin]]
name = "cli"
path = "src/bin/cli/main.rs"

# Server binary
[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rand = "0.9.0"
slugify = "0.1.0"
toml = "0.8"
dirs = "6.0"

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

# Server dependencies
[dependencies.axum]
version = "0.8"
optional = true

[dependencies.tokio]
version = "1.42"
features = ["full"]
optional = true

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"]
optional = true

[dependencies.tower]
version = "0.5"
optional = true

[dependencies.tower-http]
version = "0.6"
features = ["cors", "trace", "fs"]
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = true

# CLI dependencies
[dependencies.clap]
version = "4.5"
features = ["derive"]
optional = true

[dependencies.ratatui]
version = "0.29"
optional = true

[dependencies.crossterm]
version = "0.28"
optional = true

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[dependencies.tokio-tungstenite]
version = "0.24"
optional = true

# Features to enable dependencies for each binary
[features]
default = []
server = ["axum", "tokio", "sqlx", "tower", "tower-http", "tracing", "tracing-subscriber"]
cli = ["clap", "ratatui", "crossterm", "reqwest", "tokio", "tokio-tungstenite"]
